# qa-agent

./: README.md
.claude/: settings.local.json
QA_Agent/: .gitignore  generate_scenarios.py  pyproject.toml  run_orchestrator_e2e.py
QA_Agent/.hypothesis/constants/: 5bb88b400fd27f8a  67aab6553d0fb75d  825d5fbeac5e441f  9c3b355609bc6fff  a6d00878c14c4479  cc9ff7653b9eac84  d749be6794bc07e6
QA_Agent/.hypothesis/examples/04e6b3400353b141/: f7941f4b169a6537
QA_Agent/.kiro/hooks/: agent-done-notify.kiro.hook
QA_Agent/TC/: jtbc_scenario.json  jtbc_scenario.md  scenario-v1.md
QA_Agent/qa_scenarios/: epic_a_requirements.txt  epic_a_scenarios.json  epic_b_requirements.txt  epic_b_scenarios.json  epic_c_requirements.txt  epic_c_scenarios.json  epic_d_requirements.txt  epic_d_scenarios.json
QA_Agent/reports/: report_20260227_054204.json  report_20260227_054204.md  report_20260227_054300.json  report_20260227_054300.md  report_20260227_054814.json  report_20260227_054814.md
QA_Agent/screenshots/: test_results.json
QA_Agent/src/qa_agent_system/: __init__.py  errors.py  main.py  models.py  system.py  validator.py
QA_Agent/src/qa_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
QA_Agent/tests/: conftest.py
QA_Agent/tests/e2e/: test_jtbc_comment.py
QA_Agent/tests/property/: __init__.py  test_execution.py  test_pipeline.py  test_report_stats.py  test_roundtrip.py  test_scenario.py  test_validation.py
QA_Agent/tests/unit/: test_agent_init.py  test_error_handling.py  test_file_io.py  test_screenshot.py  test_tc_scenario_agent.py
(+23 files in other folders)
